Fix bug 1580211: Add Support for strings with SelectExpressions (#1375)
Also:
* Remove unused param from renderInput()
* Styling: Enable scrollbars in rich editor
* In getEmptyMessage(), empty all simlpe elements, not just TextElements

--- a/frontend/src/modules/fluenteditor/components/RichTranslationForm.css
+++ b/frontend/src/modules/fluenteditor/components/RichTranslationForm.css
@@ -2,6 +2,7 @@
     height: 100%;
     line-height: 22px;
     padding: 10px;
+    overflow: auto;
 }
 
 .fluent-rich-translation-form table {
@@ -25,6 +26,10 @@
     font-weight: normal;
     margin: 2px 5px 2px 0;
     padding: 0 4px;
+}
+
+.fluent-rich-translation-form table tr.indented > td > label {
+    margin-left: 10px;
 }
 
 .fluent-rich-translation-form table tr > td > textarea {
